move all authentication source files into separate tree and update linking tool.  ESA login broken

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@ testem.log
 /sql/output
 /sql/backups
 .DS_Store
+
+# files that are set per authentication method
+/app/controllers/login.js
+/app/routes/login.js
+/app/routes/application.js
+/app/templates/login.hbs
